# Sqlite3_SimpleManagerSupport

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/Database/: SQL.cpp  Table.cpp
src/Database/include/: SQL.h  Table.h
src/IO/: Config.cpp  FileManager.cpp  Settings.cpp  SettingsFileManager.cpp
src/IO/include/: Config.h  FileManager.h  Settings.h  SettingsFileManager.h
src/SharedMemory/: DataPackage.cpp  Package.cpp  Serializable.cpp  Warehouse.cpp
src/SharedMemory/include/: DataPackage.h  Package.h  Serializable.h  Warehouse.h
src/Util/: Colorful.cpp  Debug.cpp
src/Util/include/: Debug.h
src/lib/json/: json.h
src/lib/sqlite3/: sqlite3.h
